# img-squeeze

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/img_squeeze/: app.py
